--- a/cloudformation/vpc.yml
+++ b/cloudformation/vpc.yml
@@ -1,6 +1,31 @@
 AWSTemplateFormatVersion: 2010-09-09
 # This CloudFormation template deploys a basic VPC / Network.
 
+Parameters:
+  NumberOfAZs:
+    Type: Number
+    AllowedValues:
+    - 1
+    - 2
+    - 3
+    Default: 2
+    Description: How many availability zones do you wish to utilize?
+  PrivateSubnets:
+    Type: String
+    AllowedValues:
+    - True
+    - False
+    Default: True
+    Description: Do you want to create private subnets in addition to public subnets?
+
+Conditions:
+  BuildPublicB: !Not [ !Equals [ !Ref NumberOfAZs, 1 ]]
+  BuildPublicC: !Equals [ !Ref NumberOfAZs, 3 ]
+  BuildPrivateSubnets: !Equals [ !Ref PrivateSubnets, True ]
+  BuildPrivateA: !Equals [ !Ref PrivateSubnets, True ]
+  BuildPrivateB: !And [ !Not [ !Equals [ !Ref NumberOfAZs, 1 ]], !Equals [ !Ref PrivateSubnets, True] ]
+  BuildPrivateC: !And [ !Equals [ !Ref NumberOfAZs, 3], !Equals [ !Ref PrivateSubnets, True] ]
+
 Resources:
   VPC:
     Type: AWS::EC2::VPC
@@ -33,6 +58,7 @@ Resources:
         Value: !Sub ${AWS::StackName}-Public-A
   PublicSubnetB:
     Type: AWS::EC2::Subnet
+    Condition: BuildPublicB
     Properties:
       VpcId: !Ref VPC
       CidrBlock: 10.1.20.0/24
@@ -40,8 +66,19 @@ Resources:
       Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-Public-B
+  PublicSubnetC:
+    Type: AWS::EC2::Subnet
+    Condition: BuildPublicC
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.1.30.0/24
+      AvailabilityZone: !Select [ 2, !GetAZs ]    # Get the third AZ in the list
+      Tags:
+      - Key: Name
+        Value: !Sub ${AWS::StackName}-Public-C
   PrivateSubnetA:
     Type: AWS::EC2::Subnet
+    Condition: BuildPrivateA
     Properties:
       VpcId: !Ref VPC
       CidrBlock: 10.1.50.0/24
@@ -51,6 +88,7 @@ Resources:
         Value: !Sub ${AWS::StackName}-Private-A
   PrivateSubnetB:
     Type: AWS::EC2::Subnet
+    Condition: BuildPrivateB
     Properties:
       VpcId: !Ref VPC
       CidrBlock: 10.1.60.0/24
@@ -58,6 +96,16 @@ Resources:
       Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-Private-B
+  PrivateSubnetC:
+    Type: AWS::EC2::Subnet
+    Condition: BuildPrivateC
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.1.70.0/24
+      AvailabilityZone: !Select [ 2, !GetAZs ]    # Get the third AZ in the list
+      Tags:
+      - Key: Name
+        Value: !Sub ${AWS::StackName}-Private-C
 
   # Some route tables for our subnets:
   PublicRouteTable:
@@ -78,6 +126,7 @@ Resources:
   # Here is a private route table:
   PrivateRouteTable:
     Type: AWS::EC2::RouteTable
+    Condition: BuildPrivateSubnets
     Properties:
       VpcId: !Ref VPC
       Tags:
@@ -85,6 +134,7 @@ Resources:
         Value: Private
   PrivateRoute1:            # Private route table can access web via NAT (created below)
     Type: AWS::EC2::Route
+    Condition: BuildPrivateSubnets
     Properties:
       RouteTableId: !Ref PrivateRouteTable
       DestinationCidrBlock: 0.0.0.0/0
@@ -93,6 +143,7 @@ Resources:
   # A NAT Gateway:
   NATGateway:
     Type: AWS::EC2::NatGateway
+    Condition: BuildPrivateSubnets
     Properties:
       AllocationId: !GetAtt ElasticIPAddress.AllocationId
       SubnetId: !Ref PublicSubnetA
@@ -101,6 +152,7 @@ Resources:
         Value: !Sub NAT-${AWS::StackName}
   ElasticIPAddress:
     Type: AWS::EC2::EIP
+    Condition: BuildPrivateSubnets
     Properties:
       Domain: VPC
 
@@ -113,16 +165,31 @@ Resources:
       RouteTableId: !Ref PublicRouteTable
   PublicSubnetBRouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
+    Condition: BuildPublicB
     Properties:
       SubnetId: !Ref PublicSubnetB
       RouteTableId: !Ref PublicRouteTable
+  PublicSubnetCRouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Condition: BuildPublicC
+    Properties:
+      SubnetId: !Ref PublicSubnetC
+      RouteTableId: !Ref PublicRouteTable
   PrivateSubnetARouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
+    Condition: BuildPrivateA
     Properties:
       SubnetId: !Ref PrivateSubnetA
       RouteTableId: !Ref PrivateRouteTable
   PrivateSubnetBRouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
+    Condition: BuildPrivateB
     Properties:
       SubnetId: !Ref PrivateSubnetB
+      RouteTableId: !Ref PrivateRouteTable
+  PrivateSubnetCRouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Condition: BuildPrivateC
+    Properties:
+      SubnetId: !Ref PrivateSubnetC
       RouteTableId: !Ref PrivateRouteTable
