--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/swagger": "^4.1.12",
     "aws-serverless-express": "^3.3.6",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
-    "source-map-support": "^0.5.10"
+    "source-map-support": "^0.5.10",
+    "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.39",
@@ -23,6 +25,7 @@
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.25",
     "@types/node": "^10.12.18",
+    "@types/source-map-support": "^0.5.0",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "serverless": "^1.60.5",
