--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "offline": "sls offline"
+    "offline": "sls offline",
+    "encryptSecret": "ts-node src/scripts/encryptSecret.ts",
+    "decryptSecret": "ts-node src/scripts/decryptSecret.ts"
   },
   "dependencies": {
     "@nestjs/common": "^6.10.14",
@@ -27,6 +29,7 @@
     "@types/node": "^10.12.18",
     "@types/source-map-support": "^0.5.0",
     "@types/supertest": "^2.0.8",
+    "aws-sdk": "^2.606.0",
     "jest": "^24.9.0",
     "serverless": "^1.60.5",
     "serverless-offline": "^5.12.1",
