--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
+    "@nestjs/jwt": "^6.1.1",
+    "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/swagger": "^4.1.12",
     "aws-serverless-express": "^3.3.6",
     "express": "^4.17.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
     "source-map-support": "^0.5.10",
@@ -27,6 +32,8 @@
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.25",
     "@types/node": "^10.12.18",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/source-map-support": "^0.5.0",
     "@types/supertest": "^2.0.8",
     "aws-sdk": "^2.606.0",
