Trying to get past CORS =o\

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -25,4 +25,6 @@ functions:
       - http:
           method: any
           path: /{any+}
-          cors: true
+          cors:
+            origins:
+              - *
