Revert changes to actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: Deploy backend
-on: [push]
-#  pull_request:
-#    types: [closed]
+on:
+  pull_request:
+    types: [closed]
 
 jobs:
   build:
