Revert debuggin changes

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -25,6 +25,4 @@ functions:
       - http:
           method: any
           path: /{any+}
-          cors:
-            origins:
-              - "*"
+          cors: true
