Initial mailer service integration
* Add `MailerService`
* Add unit tests
* Add IAM policy for SES access

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -18,6 +18,11 @@ provider:
   environment:
     AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
 
+  iamRoleStatements:
+    - Effect: Allow
+      Action: "ses:SendRawEmail"
+      Resource: "*"
+
 functions:
   main:
     handler: src/lambda.handler
