--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "offline": "sls offline",
     "encryptSecret": "ts-node src/scripts/encryptSecret.ts",
     "decryptSecret": "ts-node src/scripts/decryptSecret.ts"
@@ -18,6 +18,7 @@
     "@nestjs/swagger": "^4.1.12",
     "aws-serverless-express": "^3.3.6",
     "express": "^4.17.1",
+    "nodemailer": "^6.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -32,21 +33,47 @@
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.25",
     "@types/node": "^10.12.18",
+    "@types/nodemailer": "^6.4.0",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/source-map-support": "^0.5.0",
     "@types/supertest": "^2.0.8",
     "aws-sdk": "^2.606.0",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "serverless": "^1.60.5",
     "serverless-offline": "^5.12.1",
     "serverless-plugin-optimize": "^4.1.3-rc.1",
     "serverless-plugin-typescript": "^1.1.9",
     "supertest": "^4.0.2",
+    "ts-jest": "^25.0.0",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.6.1",
+    "typemoq": "^2.1.0",
     "typescript": "^3.7.4"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+  "license": "MIT",
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".test.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverage": false,
+    "collectCoverageFrom": [
+      "**/*.ts",
+      "!**/node_modules/**",
+      "!**/scratch/**",
+    ],
+    "coverageDirectory": ".coverage/",
+    "testEnvironment": "node"
+  },
+  "coverageReporters": [
+    "html"
+  ]
 }
