Test mailing on deployed infrastructure
* Fix `package.json`
* Create test endpoint

--- a/backend/package.json
+++ b/backend/package.json
@@ -68,7 +68,7 @@
     "collectCoverageFrom": [
       "**/*.ts",
       "!**/node_modules/**",
-      "!**/scratch/**",
+      "!**/scratch/**"
     ],
     "coverageDirectory": ".coverage/",
     "testEnvironment": "node"
