Remove testing changes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,7 @@
 name: Deploy backend
-# on:
-#   pull_request:
-#     types: [closed]
-
-on: [push]
+on:
+  pull_request:
+    types: [closed]
 
 jobs:
   build:
