Attempt to enable CORS credentials

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -30,4 +30,13 @@ functions:
       - http:
           method: any
           path: /{any+}
-          cors: true
+          cors:
+            origin: "*"
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+            allowCredentials: true
