--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -31,7 +31,8 @@ functions:
           method: any
           path: /{any+}
           cors:
-            origin: "*"
+            origin:
+              - http://localhost:3000
             headers:
               - Content-Type
               - X-Amz-Date
