--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -30,4 +30,15 @@ functions:
       - http:
           method: any
           path: /{any+}
-          cors: true
+          cors:
+            origin:
+              - http://localhost:3000
+              - http://192.168.254.125:3000
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+            allowCredentials: true
