Create CloudFormation for database
* Generate outputs from VPC template to be used in database template

--- a/cloudformation/vpc.yml
+++ b/cloudformation/vpc.yml
@@ -157,7 +157,7 @@ Resources:
       Domain: VPC
 
 # Attach the public subnets to public route tables,
-  # and attach the private subnets to private route tables:
+# and attach the private subnets to private route tables:
   PublicSubnetARouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
@@ -193,3 +193,50 @@ Resources:
     Properties:
       SubnetId: !Ref PrivateSubnetC
       RouteTableId: !Ref PrivateRouteTable
+
+Outputs:
+  VPC:
+    Description: VPC for the network
+    Value: !Ref VPC
+    Export:
+      Name: !Sub ${AWS::StackName}-VPC
+  PublicSubnetA:
+    Description: Public subnet A
+    Value: !Ref PublicSubnetA
+    Export:
+      Name: !Sub ${AWS::StackName}-PublicSubnetA
+  PublicSubnetB:
+    Description: Public subnet B
+    Value: !Ref PublicSubnetB
+    Condition: BuildPublicB
+    Export:
+      Name: !Sub ${AWS::StackName}-PublicSubnetB
+  PublicSubnetC:
+    Description: Public subnet C
+    Value: !Ref PublicSubnetC
+    Condition: BuildPublicC
+    Export:
+      Name: !Sub ${AWS::StackName}-PublicSubnetC
+  PrivateSubnetA:
+    Description: Private subnet A
+    Value: !Ref PrivateSubnetA
+    Condition: BuildPrivateSubnets
+    Export:
+      Name: !Sub ${AWS::StackName}-PrivateSubnetA
+  PrivateSubnetB:
+    Description: Private subnet B
+    Value: !Ref PrivateSubnetB
+    Condition: BuildPrivateB
+    Export:
+      Name: !Sub ${AWS::StackName}-PrivateSubnetB
+  PrivateSubnetC:
+    Description: Private subnet C
+    Value: !Ref PrivateSubnetC
+    Condition: BuildPrivateC
+    Export:
+      Name: !Sub ${AWS::StackName}-PrivateSubnetC
+  DefaultSecurityGroup:
+    Description: VPC default security group
+    Value: !GetAtt [VPC, DefaultSecurityGroup]
+    Export:
+      Name: !Sub ${AWS::StackName}-DefaultSecurityGroup
