--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,12 @@
     "@nestjs/swagger": "^4.1.12",
     "aws-serverless-express": "^3.3.6",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "promise-mysql": "^4.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
     "source-map-support": "^0.5.10",
@@ -32,6 +34,7 @@
     "@types/aws-serverless-express": "^3.3.2",
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.25",
+    "@types/mysql": "^2.15.8",
     "@types/node": "^10.12.18",
     "@types/nodemailer": "^6.4.0",
     "@types/passport-jwt": "^3.0.3",
